--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="custom.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Alegreya+SC" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Alegreya+SC|Montserrat:100,300" rel="stylesheet">
+  <link rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
   <title>Abishek ram </title>
 
   <link rel="stylesheet" href="custom.css">
@@ -17,7 +19,7 @@
 
 <body>
 
-  <div class="off-canvas position-left reveal-for-large" id="my-info" data-off-canvas>
+  <!-- <div class="off-canvas position-left reveal-for-large" id="my-info" data-off-canvas>
     <div class="grid-y grid-padding-x" style="height: 100%;">
       <br>
       <div class="cell shrink">
@@ -30,13 +32,13 @@
         <p></p>
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="off-canvas-content" data-off-canvas-content>
   <div class="primary">
     <article class="grid-container">
       <div class="">
-        <div class "face_content" id="particles-js">
-          <div class="developer_anim text-center"><span>I'm  Full Stack developer</span></div>
+        <div class="face_content" id="particles-js">
+          <div class="developer_anim"><span class="animated  fadeInLeft">Abishek ram </span><span class="developer_role animated  fadeInRight"> Full Stack developer</span></div>
         </div>
       </div>
     </article>
@@ -75,7 +77,7 @@
           "image": {
             "src": "img/github.svg",
             "width": 100,
-            "height": 100
+            "height": "350px"
           }
         },
         "opacity": {
