--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-
+<div class="face_content" id="particles-js">
   <!-- <div class="off-canvas position-left reveal-for-large" id="my-info" data-off-canvas>
     <div class="grid-y grid-padding-x" style="height: 100%;">
       <br>
@@ -33,17 +33,17 @@
       </div>
     </div>
   </div> -->
-  <div class="off-canvas-content" data-off-canvas-content>
+  <div>
   <div class="primary">
     <article class="grid-container">
       <div class="">
-        <div class="face_content" id="particles-js">
+
           <div class="developer_anim"><span class="animated  fadeInLeft">Abishek ram </span><span class="developer_role animated  fadeInRight"> Full Stack developer</span></div>
-        </div>
+
       </div>
     </article>
   </div>
-</div>
+</div>  </div>
 
 
 
