--- a/index.html
+++ b/index.html
@@ -10,162 +10,35 @@
   <link rel="stylesheet" href="custom.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.css">
   <link href="https://fonts.googleapis.com/css?family=Alegreya+SC|Montserrat:100,300" rel="stylesheet">
-  <link rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
   <title>Abishek ram </title>
 
   <link rel="stylesheet" href="custom.css">
 </head>
 
 <body>
-<div class="face_content" id="particles-js">
-  <!-- <div class="off-canvas position-left reveal-for-large" id="my-info" data-off-canvas>
-    <div class="grid-y grid-padding-x" style="height: 100%;">
-      <br>
-      <div class="cell shrink">
-        <img class="thumbnail developer_img" src="images/developer-min.jpeg">
-      </div>
-      <div class="cell auto">
-        <div id="developer_name">
-          <h5>Abishek ram</h5>
-        </div>
-        <p></p>
-      </div>
+  <div class="intro-header factorial">
+    <div class="developer_anim">
+      <div class="row animated fadeInLeftBig">
+        <span class="">Hello, I'm <strong>Abishek ram</strong> </span></div>
+      <div class="row animated fadeInRightBig">
+        <span class="developer_role"> Software developer</span></div>
     </div>
-  </div> -->
-  <div>
-  <div class="primary">
-    <article class="grid-container">
-      <div class="">
-
-          <div class="developer_anim"><span class="animated  fadeInLeft">Abishek ram </span><span class="developer_role animated  fadeInRight"> Full Stack developer</span></div>
-
-      </div>
-    </article>
   </div>
-</div>  </div>
 
+  <div class="experience_tag factorial card">
+     <div class="card-section">
+<span>3 Years of Experience in Web App developement </span>
+</div>
+<div class="card">
 
+  </div>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-  <script>
-    particlesJS('particles-js', {
-      "particles": {
-        "number": {
-          "value": 80,
-          "density": {
-            "enable": true,
-            "value_area": 800
-          }
-        },
-        "color": {
-          "value": "#cfbdbd"
-        },
-        "shape": {
-          "type": "circle",
-          "stroke": {
-            "width": 0,
-            "color": "#000000"
-          },
-          "polygon": {
-            "nb_sides": 5
-          },
-          "image": {
-            "src": "img/github.svg",
-            "width": 100,
-            "height": "350px"
-          }
-        },
-        "opacity": {
-          "value": 0.5,
-          "random": true,
-          "anim": {
-            "enable": false,
-            "speed": 1,
-            "opacity_min": 0.1,
-            "sync": false
-          }
-        },
-        "size": {
-          "value": 3,
-          "random": true,
-          "anim": {
-            "enable": false,
-            "speed": 40,
-            "size_min": 0.1,
-            "sync": false
-          }
-        },
-        "line_linked": {
-          "enable": true,
-          "distance": 150,
-          "color": "#ffffff",
-          "opacity": 0.4,
-          "width": 1
-        },
-        "move": {
-          "enable": true,
-          "speed": 6,
-          "direction": "none",
-          "random": false,
-          "straight": false,
-          "out_mode": "out",
-          "bounce": false,
-          "attract": {
-            "enable": false,
-            "rotateX": 600,
-            "rotateY": 1200
-          }
-        }
-      },
-      "interactivity": {
-        "detect_on": "canvas",
-        "events": {
-          "onhover": {
-            "enable": true,
-            "mode": "repulse"
-          },
-          "onclick": {
-            "enable": true,
-            "mode": "push"
-          },
-          "resize": true
-        },
-        "modes": {
-          "grab": {
-            "distance": 400,
-            "line_linked": {
-              "opacity": 1
-            }
-          },
-          "bubble": {
-            "distance": 400,
-            "size": 40,
-            "duration": 2,
-            "opacity": 8,
-            "speed": 3
-          },
-          "repulse": {
-            "distance": 200,
-            "duration": 0.4
-          },
-          "push": {
-            "particles_nb": 4
-          },
-          "remove": {
-            "particles_nb": 2
-          }
-        }
-      },
-      "retina_detect": true
-    }, function() {
-      console.log('callback - particles.js config loaded');
-    });
-  </script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
