Background changed. Summary Added

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <div class="developer_anim">
       <div class="row animated fadeInLeftBig">
         <span class="">Hello, I'm <strong>Abishek ram</strong> </span></div>
-      <div class="row animated fadeInRightBig">
+      <!-- <div class="row animated fadeInRightBig">
         <span class="developer_role"> Software developer</span></div>
-    </div>
+    </div> -->
   </div>
 
   <div class="experience_tag factorial card">
      <div class="card-section">
-<span>3 Years of Experience in Web App developement </span>
+<span>Self Taught Software programmer. <strong>3 </strong>Years of Experience in Web App developement </span>
 </div>
 <div class="card">
 
