--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.css">
   <link href="https://fonts.googleapis.com/css?family=Alegreya+SC|Montserrat:100,300" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/solid.css" integrity="sha384-VxweGom9fDoUf7YfLTHgO0r70LVNHP5+Oi8dcR4hbEjS8UnpRtrwTx7LpHq/MWLI" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/fontawesome.css" integrity="sha384-rnr8fdrJ6oj4zli02To2U/e6t1qG8dvJ8yNZZPsKHcU7wFK3MGilejY5R/cUc5kf" crossorigin="anonymous">
   <title>Abishek ram </title>
 
   <link rel="stylesheet" href="custom.css">
@@ -28,7 +30,7 @@
 
   <div class="experience_tag factorial card">
      <div class="card-section">
-<span>Self Taught Software programmer. <strong>3 </strong>Years of Experience in Web App developement </span>
+<span>Self Taught Software programmer. <strong>3 </strong>Years of Experience in Web App developement. <i class="fas fa-heart"></i> to try new and interest towards solving challenging problem</span>
 </div>
 <div class="card">
 
