--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/solid.css" integrity="sha384-VxweGom9fDoUf7YfLTHgO0r70LVNHP5+Oi8dcR4hbEjS8UnpRtrwTx7LpHq/MWLI" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/fontawesome.css" integrity="sha384-rnr8fdrJ6oj4zli02To2U/e6t1qG8dvJ8yNZZPsKHcU7wFK3MGilejY5R/cUc5kf" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Kalam:300,400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Kalam:300,400" rel="stylesheet">
   <title>Abishek ram </title>
 
   <link rel="stylesheet" href="custom.css">
@@ -34,30 +34,30 @@
     <div class="card-section">
       <span>Self Taught Software programmer. <strong>3 </strong>Years of Experience in Web App developement. <br/>
         <!-- <div class="passion"> " <i class="fas fa-heart"> </i> to try new and interest towards solving challenging problems</span> -->
-    <!-- "</div> -->
-  </div>
+      <!-- "</div> -->
+    </div>
   </div>
   <div class="row">
+    <div id="experience_title">
+      Experience in :
+    </div>
+    <div class="row skill_tag">
+      <div class="columns small-6 large-6">
+        <ul class="pricing-table animated ">
+          <li class="title" style="background-color: #9F5FAB;">UI</li>
+        </ul>
+      </div>
+      <div class="columns small-6 large-6">
+        <ul class="pricing-table animated ">
+          <li class="title" style="background-color: #1D0415;">Backend</li>
+        </ul>
+      </div>
+
+
+    </div>
 
   </div>
-  <div class="row">
-    <!-- <div class="columns small-4 large-4">
-      <ul class="pricing-table animated ">
-        <li class="title">Enterprise</li>
-        <li class="price">$99.99</li>
-        <li class="description">An awesome description</li>
-        <li>42 Rad Features</li>
-        <li>7GB of Power</li>
-        <li><a class="button" href="#">Buy Now</a></li>
-      </ul>
-    </div> -->
-    <div class="columns small-4 large-4">
-      <!-- ... -->
-    </div>
-    <div class="columns small-4 large-4">
-      <!-- ... -->
-    </div>
-  </div>
+
 
 
 
@@ -67,9 +67,8 @@
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.7/typed.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.7/typed.min.js"></script>
   <script src="js/main.js">
-
   </script>
 </body>
 
