--- a/index.html
+++ b/index.html
@@ -5,70 +5,23 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="custom.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Alegreya+SC|Montserrat:100,200,300" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/solid.css" integrity="sha384-VxweGom9fDoUf7YfLTHgO0r70LVNHP5+Oi8dcR4hbEjS8UnpRtrwTx7LpHq/MWLI" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/fontawesome.css" integrity="sha384-rnr8fdrJ6oj4zli02To2U/e6t1qG8dvJ8yNZZPsKHcU7wFK3MGilejY5R/cUc5kf" crossorigin="anonymous">
   <title>Abishek ram </title>
 
   <link rel="stylesheet" href="custom.css">
 </head>
 
+<style>
+
+.wip{
+width: 100vw;
+height: 100vh;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+</style>
 <body>
-  <div class="intro-header factorial">
-    <div class="developer_anim">
-      <div class="row">
-        <span class="">Hello, I'm <strong></strong> </span></div>
-      <!-- <div class="row animated fadeInRightBig">
-        <span class="developer_role"> Software developer</span></div>
-    </div> -->
-    </div>
-  </div>
-
-  <div class="experience_tag factorial card">
-    <div class="card-section">
-      <span>Self Taught Software programmer. <strong>3 </strong>Years of Experience in Web App developement. <br/>
-        <!-- <div class="passion"> " <i class="fas fa-heart"> </i> to try new and interest towards solving challenging problems</span> -->
-      <!-- "</div> -->
-    </div>
-  </div>
-  <div class="row">
-    <div id="experience_title">
-      Experience in :
-    </div>
-    <div class="row skill_tag">
-      <div class="columns small-6 large-6">
-        <ul class="pricing-table animated ">
-          <li class="title" style="background-color: #9F5FAB;">UI</li>
-        </ul>
-      </div>
-      <div class="columns small-6 large-6">
-        <ul class="pricing-table animated ">
-          <li class="title" style="background-color: #1D0415;">Backend</li>
-        </ul>
-      </div>
-
-
-    </div>
-
-  </div>
-
-
-
-
-
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/foundation/6.2.4/foundation.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.7/typed.min.js"></script>
-  <script src="js/main.js">
-  </script>
+  <div class="wip">WIP</div>
 </body>
 
 </html>
